--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,16 @@
 @import "assets/sass/layout/_variables";
 @import "assets/sass/layout/_layout";
 @import "assets/sass/overrides/_overrides";
+
+.card {
+    border: 0.5px solid #add8e65e;
+}
+
+.p-message {
+    margin-left: .25em;
+}
+
+ .p-toast{
+    margin-top: 5.70em;
+    z-index:99999;
+}
