--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -90,6 +90,48 @@
             <user-balance (refreshEvent)="refreshBalance()" *ngIf="poolToken !== undefined" [poolToken]="poolToken"></user-balance>
           </div>
 
+          <div class="col-12 lg:col-4 xl:col-4">
+            <div
+              style="background-color: var(--surface-ground)"
+              class="card mb-0"
+            >
+              <div class="grid p-fluid justify-content-center">
+                <div class="col-12 flex align-items-center">
+             
+                  <span class="block text-500 font-medium ml-2"> Your stream</span>
+                  <!-- #region REALTIME  ////  -->
+                </div>
+                <div class="col-12 text-center">
+                     <div class="flex justify-content-between flex-column mb-3">
+                      <div class="text-900 font-medium text-lg">
+                        <span class="text-green-500">
+                          <span style="font-size: 40px"> {{ twoDec }}</span
+                          >{{ fourDec }}
+                        </span>
+                      </div>
+                    </div>
+         
+                </div>
+
+                <!-- #endregion REALTIME ////  -->
+
+          
+
+                <div class="col-12 flex justify-content-around">
+                  <button
+                    pButton
+                    pRipple
+                    style="position: relative; width: fit-content"
+                    (click)="showStartFlow()"
+                    type="button"
+                    label="Stream-->"
+                    class="p-button-rounded mr-2 mb-2"
+                  ></button>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
