--- a/src/app/shared/components/toolbar/app.topbar.component.html
+++ b/src/app/shared/components/toolbar/app.topbar.component.html
@@ -1,6 +1,6 @@
 <div class="layout-topbar">
   <a style="width: unset" class="layout-topbar-logo" routerLink="">
-    <span>Flowdy</span>
+    <span>Floowdy</span>
   </a>
 
   <div
