--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -23,11 +23,14 @@
         ></div>
 
         <div style="margin-top: 20px" class="grid">
-
-
           <!-- //// Wrap-Unwrap -->
           <div class="col-12 lg:col-4 xl:col-4">
-            <user-balance (refreshEvent)="refreshBalance()" (mintEvent)="mint()" *ngIf="poolToken !== undefined" [poolToken]="poolToken"></user-balance>
+            <user-balance
+              (refreshEvent)="refreshBalance()"
+              (mintEvent)="mint()"
+              *ngIf="poolToken !== undefined"
+              [poolToken]="poolToken"
+            ></user-balance>
           </div>
 
           <div class="col-12 lg:col-4 xl:col-4">
@@ -37,25 +40,23 @@
             >
               <div class="grid p-fluid justify-content-center">
                 <div class="col-12 flex align-items-center">
-             
-                  <span class="block text-500 font-medium ml-2"> Your stream</span>
+                  <span class="block text-500 font-medium ml-2">
+                    Your stream</span
+                  >
                   <!-- #region REALTIME  ////  -->
                 </div>
                 <div class="col-12 text-center">
-                     <div class="flex justify-content-between flex-column mb-3">
-                      <div class="text-900 font-medium text-lg">
-                        <span class="text-green-500">
-                          <span style="font-size: 40px"> {{ twoDec }}</span
-                          >{{ fourDec }}
-                        </span>
-                      </div>
+                  <div class="flex justify-content-between flex-column mb-3">
+                    <div class="text-900 font-medium text-lg">
+                      <span class="text-green-500">
+                        <span style="font-size: 40px"> {{ twoDec }}</span
+                        >{{ fourDec }}
+                      </span>
                     </div>
-         
+                  </div>
                 </div>
 
                 <!-- #endregion REALTIME ////  -->
-
-          
 
                 <div class="col-12 flex justify-content-around">
                   <button
@@ -72,49 +73,60 @@
             </div>
           </div>
 
-
-                    <!-- //// Mint area -->
-                    <div class="col-12 lg:col-4 xl:col-4">
-                      <div
-                        style="background-color: var(--surface-ground)"
-                        class="card mb-0"
+          <!-- //// Mint area -->
+          <div class="col-12 lg:col-4 xl:col-4">
+            <div
+              style="background-color: var(--surface-ground)"
+              class="card mb-0"
+            >
+              <div class="grid p-fluid justify-content-center">
+                <div class="col-12 flex align-items-center">
+                  <span class="block text-500 font-medium ml-2"> Deposit</span>
+                  <!-- #region REALTIME  ////  -->
+                </div>
+                <div class="col-12 text-center">
+                  <div class="flex justify-content-between flex-column mb-2">
+                    <div class="text-900 font-medium text-lg">
+                      <p-inputNumber
+                        [formControl]="depositAmountCtrl"
+                        placeholder="Amount"
+                        mode="decimal"
+                        [showButtons]="true"
+                        [min]="0"
                       >
-                        <div class="grid p-fluid justify-content-center">
-                          <div class="col-12 flex align-items-center">
-                       
-                            <span class="block text-500 font-medium ml-2"> Deposit</span>
-                            <!-- #region REALTIME  ////  -->
-                          </div>
-                          <div class="col-12 text-center">
-                            <div class="flex justify-content-between flex-column mb-2">
-                              <div class="text-900 font-medium text-lg">
-                                <p-inputNumber
-                                [formControl]="depositAmountCtrl"
-                                placeholder="Amount"
-                                mode="decimal"
-                                [showButtons]="true"
-                                [min]="0"
-                              >
-                              </p-inputNumber>
-                              </div>
-                            </div>
-                          </div>
-          
-                          <!-- #endregion REALTIME ////  -->
-          
-                
-                          <div class="col-12 flex justify-content-around">
-                         <button  pButton pRipple style="width: fit-content"
-                       
-                          (click)="deposit()" type="button" label="Deposit" class="p-button-rounded mr-2 mb-2"></button>
-                          </div>
-                 
-                        </div>
-                      </div>
+                      </p-inputNumber>
                     </div>
+                  </div>
+                </div>
 
+                <!-- #endregion REALTIME ////  -->
+
+                <div class="col-12 flex justify-content-around">
+                  <button
+                    pButton
+                    pRipple
+                    style="width: fit-content"
+                    (click)="deposit()"
+                    type="button"
+                    label="Deposit"
+                    class="p-button-rounded mr-2 mb-2"
+                  ></button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="col-12">
+        <p-tabView orientation="center">
+          <p-tabPanel header="Trades" class="line-height-3 m-0">
+
+            </p-tabPanel>
+            <p-tabPanel header="Trades" class="line-height-3 m-0">
+
+            </p-tabPanel>
+            </p-tabView>
     </div>
   </div>
 </div>
