--- a/src/app/pages/request-credit/request-credit.component.html
+++ b/src/app/pages/request-credit/request-credit.component.html
@@ -1,13 +1,26 @@
 <div class="grid justify-content-center">
-  <div class="col-8">
+  <div class="col-12">
     <div
       style="position: relative; border-color: transparent"
-      class="card text-center"
+      class="text-center"
     >
-      <h5>Let's build together the Trust</h5>
-
+      <div class="card">
+        <div class="flex align-items-center justify-content-between mb-0">
+            <h5>Let's build together the Trust</h5>
+    
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
+    </div>
       <div style="margin-top: 20px" class="grid">
-        <div class="col-12 lg:col-6 xl:col-">
+
+        <div class="card">
+        <div class="col-12 lg:col-6 xl:col-6">
         <div *ngIf="lensLoading">
             <h6>Checking Your Lens Profile</h6>
             <p-progressSpinner></p-progressSpinner>
@@ -25,6 +38,18 @@
             </div>
         </div>
 
+        </div>
+        <p-divider layout="vertical">
+          <b>AND</b>
+      </p-divider>
+      <div class="col-12 lg:col-6 xl:col-6">
+        <div >
+            <h6>Checking Your Profiel</h6>
+            <p-progressSpinner></p-progressSpinner>
+        </div>
+
+
+        </div>
         </div>
       </div>
       
