--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -125,7 +125,9 @@
             header="Credits Requested"
             class="line-height-3 m-0 text-center"
           >
-            <button
+           
+          <credit-table></credit-table>
+          <button
               pButton
               pRipple
               style="
