--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -13,5 +13,18 @@ style="
   justify-content: center;
 "
 >
-<p-progressSpinner></p-progressSpinner>
+<div class="col-12 xl:col-6" style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
+  <div class="h-full w-full m-0 py-7 px-4" style="border-radius:53px; background: linear-gradient(180deg, var(--surface-50) 38.9%, var(--surface-0));">
+      <div class="text-center mb-5">
+          <img src="assets/layout/images/avatar.png" alt="Image" height="50" class="mb-3">
+          <div class="text-900 text-3xl font-medium mb-3">Welcome!</div>
+          <span class="text-600 font-medium">Sign in to continue</span>
+      </div>
+  
+      <div class="w-full md:w-10 mx-auto">
+        <p-progressSpinner></p-progressSpinner>
+      </div>
+  </div>
+</div>
+
 </div>
