--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -1,8 +1,8 @@
 <div class="grid">
 
-    <div class="col-12 xl:col-6">
+    <div class="col-12 xl:col-12">
         <div class="card">
-            <h5>Recent Sales</h5>
+            <h5>Credits </h5>
             <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
                     <tr>
@@ -15,12 +15,15 @@
                 <ng-template pTemplate="body" let-product>
                     <tr>
                         <td style="width: 15%; min-width: 5rem;">
-                            <img src="assets/demo/images/product/{{product.image}}" class="shadow-4" alt="{{product.name}}" width="50">
+                           {{product.name}}
                         </td>
                         <td style="width: 35%; min-width: 7rem;">{{product.name}}</td>
                         <td style="width: 35%; min-width: 8rem;">{{product.price | currency:'USD'}}</td>
                         <td style="width: 15%;">
-                            <button pButton pRipple type="button" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
+                            <button pButton pRipple type="button" (click)="goToCredit(product.id)" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
+                        </td>
+                        <td style="width: 15%;">
+                            <button pButton pRipple type="button"  (click)="checkOut(product.id)" label="Check Out" class="p-button p-component p-button-text p-button-icon-only"></button>
                         </td>
                     </tr>
                 </ng-template>
