--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -126,7 +126,7 @@
             class="line-height-3 m-0 text-center"
           >
            
-          <credit-table></credit-table>
+          <credit-table *ngIf="member!= undefined" [credits]="member.creditsDelegated"  ></credit-table>
           <button
               pButton
               pRipple
