--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -3,28 +3,36 @@
     <div class="col-12 xl:col-12">
         <div class="card">
             <h5>Credits </h5>
-            <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
+            <p-table [value]="credits" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>Image</th>
-                        <th pSortableColumn="name">Name </th>
-                        <th pSortableColumn="price">Price </th>
-                        <th>View</th>
+                        <th>Id</th>
+                        <th >Requester </th>
+                        <th >Amount</th>
+                        <th> Rate</th>
+                        <th> Created</th>
+                        <th> Finish Voting Period</th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-product>
+                <ng-template pTemplate="body" let-credit>
                     <tr>
-                        <td style="width: 15%; min-width: 5rem;">
-                           {{product.name}}
+                        <td style="width: 5%; min-width: 5rem;">
+                           {{credit.id}}
                         </td>
-                        <td style="width: 35%; min-width: 7rem;">{{product.name}}</td>
-                        <td style="width: 35%; min-width: 8rem;">{{product.price | currency:'USD'}}</td>
-                        <td style="width: 15%;">
-                            <button pButton pRipple type="button" (click)="goToCredit(product.id)" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
+                        <td style="width: 15%; min-width: 7rem;">credit.requester.member</td>
+                        <td style="width: 15%; min-width: 8rem;">{{credit.amount}}</td>
+                        <td style="width: 10%; min-width: 8rem;">{{credit.rate}}</td>
+                        <td style="width: 10%; min-width: 8rem;">{{credit.initTimestamp}}</td>
+                        <!-- <td style="width: 30%; min-width: 8rem;">{{credit.denyPeriodTimestamp}}</td> -->
+                     
+                        <td style="width: 10%;">
+                            <button pButton pRipple type="button" (click)="goToCredit(credit.id)" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
                         </td>
-                        <td style="width: 15%;">
-                            <button pButton pRipple type="button"  (click)="checkOut(product.id)" label="Check Out" class="p-button p-component p-button-text p-button-icon-only"></button>
+                        <td style="width: 10%;">
+                            <button pButton pRipple type="button"  (click)="checkOut(credit.id)" label="Check Out" class="p-button p-component p-button-text p-button-icon-only"></button>
                         </td>
+                        <td style="width: 5%; min-width: 8rem;">{{credit.status}}</td>
+                     
                     </tr>
                 </ng-template>
             </p-table>
