--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -19,10 +19,10 @@
                         <td style="width: 5%; min-width: 5rem;">
                            {{credit.id}}
                         </td>
-                        <td style="width: 15%; min-width: 7rem;">credit.requester.member</td>
+                        <td style="width: 15%; min-width: 7rem;">{{displayAddress(credit.requester.member)}}</td>
                         <td style="width: 15%; min-width: 8rem;">{{credit.amount}}</td>
                         <td style="width: 10%; min-width: 8rem;">{{credit.rate}}</td>
-                        <td style="width: 10%; min-width: 8rem;">{{credit.initTimestamp}}</td>
+                        <td style="width: 10%; min-width: 8rem;">{{blockTimeToTime(credit.initTimestamp)}}</td>
                         <!-- <td style="width: 30%; min-width: 8rem;">{{credit.denyPeriodTimestamp}}</td> -->
                      
                         <td style="width: 10%;">
