--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -125,22 +125,26 @@
             header="Your Credits"
             class="line-height-3 m-0 text-center"
           >
-           
-          <credit-table *ngIf="member!= undefined" [creditType]="'requested'" [credits]="member.creditsRequested"  ></credit-table>
+          <div *ngIf="member!= undefined && member.creditsRequested.length == 0">
+            OOPS NO CREDITS
+          </div>
           <button
-              pButton
-              pRipple
-              style="
-                position: relative;
-                width: fit-content;
-                border-color: var(--orange-400);
-                background-color: var(--yellow-200);
-              "
-              (click)="requestCredit()"
-              type="button"
-              label="Request Credit Delegation"
-              class="p-button-rounded mr-2 mb-2"
-            ></button>
+          pButton
+          pRipple
+          style="
+          margin: 20px auto;
+            position: relative;
+            width: fit-content;
+            border-color: var(--orange-400);
+            background-color: var(--yellow-200);
+          "
+          (click)="requestCredit()"
+          type="button"
+          label="Request Credit Delegation"
+          class="p-button-rounded mt-3 mr-2 mb-2"
+        ></button>
+          <credit-table *ngIf="member!= undefined && member.creditsRequested.length > 0" [creditType]="'requested'" [credits]="member.creditsRequested"  ></credit-table>
+      
        
           </p-tabPanel>
           <p-tabPanel header="Credits Delegated" class="line-height-3 m-0">
