--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -1,41 +1,99 @@
 <div class="grid">
 
     <div class="col-12 xl:col-12">
-        <div class="card">
-            <h5>Credits </h5>
-            <p-table [value]="credits" [paginator]="true" [rows]="5" responsiveLayout="scroll">
+        <div style="border:unset" class="card">
+      
+            <p-table  [value]="credits" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
-                    <tr>
+                    <tr *ngIf="creditType=='delegated'">
                         <th>Id</th>
-                        <th >Requester </th>
-                        <th >Amount</th>
+                        <th>Requester </th>
+                        <th>Amount</th>
                         <th> Rate</th>
-                        <th> Created</th>
+                        <th>Amount Delegated</th>
                         <th> Finish Voting Period</th>
+
+                        <th style="text-align:center"> Delegators Checked In</th>
+             
+                        <th style="text-align: center;width: 10%;"> Action</th>
+                        <th style="text-align: center;"> Status</th>
+                    </tr>
+                    <tr *ngIf="creditType=='requested'">
+                        <th>Id</th>
+                        <th>Amount</th>
+                        <th> Rate</th>
+
+                        <th> Finish Voting Period</th>
+
+                        <th style="text-align:center"> Delegators Checked In</th>
+                        <th style="text-align: center;width: 10%;"> Action</th>
+                        <th style="text-align: center;"> Status</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-credit>
-                    <tr>
+                    <tr *ngIf="creditType=='delegated'" style="text-align:center">
                         <td style="width: 5%; min-width: 5rem;">
-                           {{credit.id}}
+                            {{credit.id}}
                         </td>
-                        <td style="width: 15%; min-width: 7rem;">address</td>
-                        <td style="width: 15%; min-width: 8rem;">{{credit.amount}}</td>
-                        <td style="width: 10%; min-width: 8rem;">{{credit.rate}}</td>
-                        <td style="width: 10%; min-width: 8rem;">{{blockTimeToTime(credit.initTimestamp)}}</td>
-                        <!-- <td style="width: 30%; min-width: 8rem;">{{credit.denyPeriodTimestamp}}</td> -->
-                     
-                        <td style="width: 10%;">
+                        <td style="width: 15%; ">{{displayAddress(credit.requester.member)}}</td>
+                        <td style="width: 10%; ">{{credit.amount}}$</td>
+                        <td style="width: 5%;">{{credit.rate}}%</td>
+                        <td style="width: 10%;">{{credit.delegatorsAmount}}$</td>
+                        <td style="width: 25%;">{{blockTimeToTime(credit.denyPeriodTimestamp)}}</td>
+
+                        <td style="width: 10%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of (5)</td>
+
+
+
+
+                        <!-- <td  style="width: 10%;">
                             <button pButton pRipple type="button" (click)="goToCredit(credit.id)" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
+                        </td> -->
+                        <td style="width: 15%;text-align:center">
+                            <button pButton pRipple type="button" *ngIf="credit.status == 2" icon="pi pi-search"
+                                (click)="goToCredit(credit.id)" label="Stop"
+                                class="p-button p-component p-button-text  p-button-icon-only"></button>
+                            <button pButton pRipple type="button" *ngIf="credit.status == 1"
+                                (click)="stopCredit(credit.id)" label="Check Out"
+                                class="p-button p-component p-button"></button>
+
                         </td>
-                        <td style="width: 30%;">
-                            <button pButton pRipple type="button"  [disabled]="true" (click)="checkOut(credit.id)" label="Check Out" class="p-button p-component p-button-text"></button>
-                        </td>
-                        <td style="width: 5%; min-width: 8rem;">{{credit.status}}</td>
+
                      
+                        <td style="width: 5%; min-width: 5rem;text-align:center">
+                            <div [style.background]="credit.status == 1 ? 'orange' : credit.status == 2 ?  'green' : 'red'"
+                                style="height:40px;width:40px;border-radius:20px;background: green;"></div>
+                        </td>
+
+                    </tr>
+                    <tr *ngIf="creditType=='requested'" style="text-align:center">
+                        <td style="width: 5%; min-width: 5rem;">
+                            {{credit.id}}
+                        </td>
+                        <td style="width: 15%; min-width: 4rem;">{{credit.amount}}$</td>
+                        <td style="width: 10%; min-width: 4rem;">{{credit.rate}}%</td>
+                        <td style="width: 30%; min-width: 4rem;">{{blockTimeToTime(credit.denyPeriodTimestamp)}}</td>
+                        <td style="width: 5%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of (5)</td>
+
+                        <td style="width: 10%;text-align:center">
+                            <button pButton pRipple type="button" *ngIf="credit.status == 2" icon="pi pi-search"
+                                (click)="goToCredit(credit.id)" label="Stop"
+                                class="p-button p-component p-button-text  p-button-icon-only"></button>
+                            <button pButton pRipple type="button" *ngIf="credit.status == 1"
+                                (click)="stopCredit(credit.id)" label="Stop"
+                                class="p-button p-component p-button"></button>
+
+                        </td>
+
+
+                        <td style="width: 10%; min-width: 5rem;text-align:center">
+                            <div [style.background]="credit.status == 1 ? 'orange' : credit.status == 2 ?  'green' : 'red'"
+                                style="height:40px;width:40px;border-radius:20px;background: green;"></div>
+                        </td>
+
                     </tr>
                 </ng-template>
             </p-table>
         </div>
     </div>
-    </div>
+</div>
