--- a/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
+++ b/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
@@ -1,1 +1,12 @@
-<p>credit-summary works!</p>
+<div class="grid">
+    <div class="col-5">
+      <span>'hola'</span>
+
+
+    
+
+    </div>
+    <div class="col-5">
+        <lens-profile></lens-profile>
+    </div>
+</div>
