--- a/src/app/shared/components/toolbar/app.topbar.component.html
+++ b/src/app/shared/components/toolbar/app.topbar.component.html
@@ -3,6 +3,14 @@
     <span>Floowdy</span>
   </a>
 
+  <div  *ngIf="blockchain_status !== 'wallet-connected'"  style="margin-left: 10px;" class="layout-topbar-menu" >
+
+    <a  [routerLink]="'landing'" style=" margin-left: unset;"  class="p-link layout-topbar-button">
+        <i class="pi pi-home"></i>
+    </a>
+   
+
+   </div>
   <div
     *ngIf="blockchain_status != 'wallet-connected'"
     style="align-items: center; margin-right: 30px"
@@ -18,13 +26,27 @@
       class="p-button-rounded mr-2 mb-2"
     ></button>
   </div>
+  <div  *ngIf="blockchain_status == 'wallet-connected'"  style="margin-left: 10px;" class="layout-topbar-menu" >
 
+    <a  [routerLink]="'landing'" style=" margin-left: unset;"  class="p-link layout-topbar-button">
+      <i class="pi pi-home"></i>
+  </a>
+    <a  routerLink="dashboard" style="margin-left: unset" class="p-link layout-topbar-button">
+        <i class="pi pi-person"></i>
+    </a>
+
+   </div>
   <div
     *ngIf="blockchain_status == 'wallet-connected'"
     style="align-items: center; margin-right: 30px"
     class="layout-topbar-menu"
   >
-    <a>{{ address_to_show }}</a>
+    <span style="color: var(--primary-color);">{{displayAdress(address_to_show) }}</span>
+    <i
+    class="pi pi-copy"
+    style="font-size: 1rem; cursor: pointer"
+    [cdkCopyToClipboard]="address_to_show"
+  ></i>
     <p-dropdown
       *ngIf="network == 'localhost'"
       class="ml-4"
