--- a/src/app/shared/components/toolbar/app.topbar.component.html
+++ b/src/app/shared/components/toolbar/app.topbar.component.html
@@ -1,16 +1,21 @@
 <div class="layout-topbar">
   <a style="width: unset" class="layout-topbar-logo" routerLink="">
-    <span>Floowdy</span>
+    <img  style="transform: scale(0.7);" src="assets/images/logo_horizontal.png" />
   </a>
 
-  <div  *ngIf="blockchain_status !== 'wallet-connected'"  style="margin-left: 10px;" class="layout-topbar-menu" >
-
-    <a  [routerLink]="'landing'" style=" margin-left: unset;"  class="p-link layout-topbar-button">
-        <i class="pi pi-home"></i>
+  <div
+    *ngIf="blockchain_status !== 'wallet-connected'"
+    style="margin-left: 10px"
+    class="layout-topbar-menu"
+  >
+    <a
+      [routerLink]="'landing'"
+      style="margin-left: unset"
+      class="p-link layout-topbar-button"
+    >
+      <i class="pi pi-home"></i>
     </a>
-   
-
-   </div>
+  </div>
   <div
     *ngIf="blockchain_status != 'wallet-connected'"
     style="align-items: center; margin-right: 30px"
@@ -26,27 +31,39 @@
       class="p-button-rounded mr-2 mb-2"
     ></button>
   </div>
-  <div  *ngIf="blockchain_status == 'wallet-connected'"  style="margin-left: 10px;" class="layout-topbar-menu" >
-
-    <a  [routerLink]="'landing'" style=" margin-left: unset;"  class="p-link layout-topbar-button">
+  <div
+    *ngIf="blockchain_status == 'wallet-connected'"
+    style="margin-left: 10px"
+    class="layout-topbar-menu"
+  >
+    <a
+      [routerLink]="'landing'"
+      style="margin-left: unset"
+      class="p-link layout-topbar-button"
+    >
       <i class="pi pi-home"></i>
-  </a>
-    <a  routerLink="dashboard" style="margin-left: unset" class="p-link layout-topbar-button">
-        <i class="pi pi-person"></i>
     </a>
-
-   </div>
+    <a
+      routerLink="dashboard"
+      style="margin-left: unset"
+      class="p-link layout-topbar-button"
+    >
+      <i class="pi pi-person"></i>
+    </a>
+  </div>
   <div
     *ngIf="blockchain_status == 'wallet-connected'"
     style="align-items: center; margin-right: 30px"
     class="layout-topbar-menu"
   >
-    <span style="color: var(--primary-color);">{{displayAdress(address_to_show) }}</span>
+    <span style="color: var(--primary-color)">{{
+      displayAdress(address_to_show)
+    }}</span>
     <i
-    class="pi pi-copy"
-    style="font-size: 1rem; cursor: pointer"
-    [cdkCopyToClipboard]="address_to_show"
-  ></i>
+      class="pi pi-copy"
+      style="font-size: 1rem; cursor: pointer"
+      [cdkCopyToClipboard]="address_to_show"
+    ></i>
     <p-dropdown
       *ngIf="network == 'localhost'"
       class="ml-4"
