--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -121,11 +121,11 @@
         </div>
       </div>
    
-      <div class="col-4">
+      <div class="col-8">
         <div style="border:unset;height:380px;text-align: center;" class="card mb-0">
-          <span>Yield</span>
-        <div style="width: 300px;margin:auto">
-          <p-chart type="pie" [data]="pieData" [options]="pieOptions"></p-chart>
+          <span>Capital Efficiency</span>
+        <div style="margin:auto;width:600px;">
+          <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
         </div>
         </div>
       </div>
@@ -133,16 +133,7 @@
       <div class="col-4">
         <div style="border:unset;height:380px;text-align: center;" class="card mb-0">
           <span>Yield</span>
-        <div style="width: 300px;margin:auto">
-          <p-chart type="pie" [data]="pieData" [options]="pieOptions"></p-chart>
-        </div>
-        </div>
-      </div>
-        
-      <div class="col-4">
-        <div style="border:unset;height:380px;text-align: center;" class="card mb-0">
-          <span>Yield</span>
-        <div style="width: 300px;margin:auto">
+        <div style="margin:auto;width:300px;">
           <p-chart type="pie" [data]="pieData" [options]="pieOptions"></p-chart>
         </div>
         </div>
