--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -39,7 +39,7 @@
                         <td style="width: 10%; ">{{credit.amount}}$</td>
                         <td style="width: 5%;">{{credit.rate}}%</td>
                         <td style="width: 10%;">{{credit.delegatorsAmount}}$</td>
-                        <td style="width: 25%;">{{blockTimeToTime(credit.denyPeriodTimestamp)}}</td>
+                        <td style="width: 25%;">{{blockTimeToTime(credit.finishPhaseTimestamp)}}</td>
 
                         <td style="width: 10%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of (5)</td>
 
@@ -72,7 +72,7 @@
                         </td>
                         <td style="width: 15%; min-width: 4rem;">{{credit.amount}}$</td>
                         <td style="width: 10%; min-width: 4rem;">{{credit.rate}}%</td>
-                        <td style="width: 30%; min-width: 4rem;">{{blockTimeToTime(credit.denyPeriodTimestamp)}}</td>
+                        <td style="width: 30%; min-width: 4rem;">{{blockTimeToTime(credit.finishPhaseTimestamp)}}</td>
                         <td style="width: 5%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of (5)</td>
 
                         <td style="width: 10%;text-align:center">
