--- a/src/app/shared/components/toolbar/app.topbar.component.html
+++ b/src/app/shared/components/toolbar/app.topbar.component.html
@@ -50,6 +50,13 @@
     >
      dashboard
     </a>
+    <a 
+    routerLink="credit-marketplace"
+    style="margin-left:30px;width:120px"
+    class="p-link layout-topbar-button menu_css" routerLinkActive="active"
+  >
+   marketplace
+  </a>
   </div>
   <div
     *ngIf="blockchain_status == 'wallet-connected'"
