--- a/src/app/shared/components/toolbar/app.topbar.component.html
+++ b/src/app/shared/components/toolbar/app.topbar.component.html
@@ -68,7 +68,7 @@
     }}</span>
     <i
       class="pi pi-copy"
-      style="font-size: 1rem; cursor: pointer"
+      style="margin-left:5px;font-size: 1rem; cursor: pointer"
       [cdkCopyToClipboard]="address_to_show"
     ></i>
     <p-dropdown
