--- a/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
+++ b/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
@@ -41,7 +41,7 @@
     </div>
    
   <div  class="col-12">
-    <div style="height:420px" class="text-center card">
+    <div  *ngIf="display_step >=1 && display_step <=4 " style="height:420px" class="text-center card">
       <h5 style="margin: 20px auto 5px" class="mb-1">
         <i (click)="doRefresh()" style="color: var(--primary-color); font-size: 30px;cursor:pointer;margin-right:10px" class="pi pi-refresh"></i>  Current Phase: <span style="color: var(--primary-color)">{{ stepItems[display_step-1].label }}</span> 
       </h5>
@@ -110,9 +110,15 @@
           <span style="margin-left:10px" [ngStyle]="{ lineHeight: '2.5rem' }">Phase will end:<span style="color:var(--primary-color)">{{ blockTimeToTime(+credit.finishPhaseTimestamp) }}</span> </span>
     
           <div>
+          <div *ngIf="role == 'requester'">
           <button (click)="executeCredit()" pButton pRipple type="button" icon="pi pi-check" class="p-button-rounded p-button-outlined mr-2 mb-2"></button>
           <button (click)="cancelCredit()" pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger p-button-outlined mr-2 mb-2"></button>
+        </div>
+        <div *ngIf="role != 'requester'">
+          <span style="margin-left:15px" [ngStyle]="{ lineHeight: '2.5rem' }"><span style="color:var(--primary-color)"> Waiting for Approval</span></span> 
    
+          </div>
+
       
         </div>
         </div>
@@ -122,7 +128,13 @@
       </div>
     </div>
   </div>
-  </div>
+
+    <div  *ngIf="display_step == 5 " style="height:420px" class="text-center card">
+      <h5 style="margin: 20px auto 5px" class="mb-1">
+        <i (click)="doRefresh()" style="color: var(--primary-color); font-size: 30px;cursor:pointer;margin-right:10px" class="pi pi-refresh"></i>  Payment Plan <span style="color: var(--primary-color)"> Payment Plan </span> 
+      </h5>
+      </div>
+ 
   <div class="col-6">
    <!-- // <lens-profile [profile]="profile" > </lens-profile> -->
   </div>
